[package]
name = "ksbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", features = ["sink", "std"] }
serde_json = "1.0.83"
tini = "1.3.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.61"
reqwest = { version = "0.11.11", features = ["json"] }
tokio-tungstenite = {version = "0.17.2", features = ["native-tls"]}
tokio = { version = "1", features = ["full"] }
url = "2.0.0"
flate2 = "1.0.24"
async-trait = "0.1.57"
sled = "0.34.7"
fast-xml = { version = "0.23.1", features = ["serialize"] }
