[package]
name = "ksbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.21", features = ["sink", "std"] }
serde_json = "1.0.83"
tini = "1.3.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.11.11", features = ["json"] }
tokio-tungstenite = {version = "0.17.2", features = ["native-tls"]}
tokio = { version = "1", features = ["full"] }
url = "2"
flate2 = "1"
async-trait = "0.1"
quick-xml = { version = "0.23.0", features = ["serialize"] }
once_cell = "1.13.0"
thiserror = "1"
simplelog = "0.12.0"
log = "0.4.0"
sled = "0.34.7"
structopt = "0.3"
