[package]
name = "ksbot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json"]}
tracing-appender = "0.2"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
serde_json = "1.0.96"
tini = "1.3.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.11.16", features = ["json"] }
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["full"]}
url = "2"
flate2 = "1"
quick-xml = { version = "0.23.0", features = ["serialize"] }
once_cell = "1.17.2"
thiserror = "1"
sled = "0.34.7"
structopt = "0.3"
itoa = "1.0"
regex = "1"
